syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// RogueTalents message.
message RogueTalents {
}

enum RogueMajorGlyph {
    RogueMajorGlyphNone = 0;
    GlyphOfShadowWalk = 42954;
    GlyphOfAmbush = 42955;
    GlyphOfBladeFlurry = 42957;
    GlyphOfSharpKnives = 42958;
    GlyphOfRecuperate = 42959;
    GlyphOfEvasion = 42960;
    GlyphOfRecovery = 42961;
    GlyphOfExposeArmor = 42962;
    GlyphOfFeint = 42963;
    GlyphOfGarrote = 42964;
    GlyphOfGouge = 42966;
    GlyphOfSmokeBomb = 42968;
    GlyphOfCheapShot = 42969;
    GlyphOfHemorraghingVeins = 42970;
    GlyphOfKick = 42971;
    GlyphOfRedirect = 42972;
    GlyphOfShiv = 42973;
    GlyphOfSprint = 42974;
    GlyphOfVendetta = 45761;
    GlyphOfStealth = 45764;
    GlyphOfDeadlyMomentum = 45766;
    GlyphOfCloakOfShadows = 45769;
    GlyphOfVanish = 63420;
    GlyphOfBlind = 64493;
}

enum RogueMinorGlyph {
    RogueMinorGlyphNone = 0;
    GlyphOfDecoy = 42956;
    GlyphOfDetection = 42965;
    GlyphOfHemorrhage = 42967;
    GlyphOfPickPocket = 43343;
    GlyphOfDistract = 43376;
    GlyphOfPickLock = 43377;
    GlyphOfSafeFall = 43378;
    GlyphOfBlurredSpeed = 43379;
    GlyphOfPoisons = 43380;
    GlyphOfKillingSpree = 45762;
    GlyphOfTricksOfTheTrade = 45767;
    GlyphOfDisguise = 45768;
    ZzoldGlyphOfStabbing = 71799;
    GlyphOfHeadhunting = 104123;
    GlyphOfImprovedDistraction = 104124;
}

// END GENERATED

message RogueOptions {
	UnitReference tricks_of_the_trade_target = 1;
	enum PoisonImbue {
		NoPoison = 0;
		InstantPoison = 1;
		DeadlyPoison = 2;
		WoundPoison = 3;
	}
	PoisonImbue mh_imbue = 2;
	PoisonImbue oh_imbue = 3;
	PoisonImbue th_imbue = 4;
	int32 starting_overkill_duration = 5;
	bool apply_poisons_manually = 6;
	bool assume_bleed_active = 7;
	float vanish_break_time = 8;
	int32 starting_combo_points = 9;
}

message AssassinationRogue {
	message Rotation {}

	message Options {
		RogueOptions class_options = 1;
	}
	Options options = 1;
}

message CombatRogue {
	message Rotation {}

	message Options {
		RogueOptions class_options = 1;
	}
	Options options = 1;
}

message SubtletyRogue {
	message Rotation {}

	message Options {
		RogueOptions class_options = 1;
		int32 honor_among_thieves_crit_rate = 6;
	}
	Options options = 1;
}
